--- a/pages/my/index.wxml
+++ b/pages/my/index.wxml
@@ -1,12 +1,5 @@
-<view class='mImg'>
-  <view>
-    <i-avatar src="https://i.loli.net/2017/08/21/599a521472424.jpg" size="large"></i-avatar>
-  <text class='mText'>931912343</text>
-  <text class='mText1'> >  </text>
-  </view>
-</view>
 
-
+<!-- <z-swiper /> -->
 <van-cell-group>
   <van-cell title="我的订单" icon="pending-orders" is-link url="/pages/my-order/index" />
   <van-cell title="收货地址" icon="location" is-link url="/pages/my-address/index" />
